# Lest_toolset

./: .gitignore  CMakeLists.txt  Windows_vs17_2022_x64.cmd
Resources/: Objects.json
Source/: main.cpp
Source/Editor/: DisplayProperties.cpp  DisplayProperties.h  ImGuiManage.cpp  ImGuiManage.h  ObjectEditor.cpp  ObjectEditor.h  PopupModal.cpp  PopupModal.h  StoreProperties.cpp
Source/Extra/: git_hash.cmake  git_hash.template  git_name_branch.cmake  git_name_branch.template  version.cmake  version.h.template
Source/FindDuplicate/: DisplayProperties.cpp  DisplayProperties.h  FindDuplicate.cpp  FindDuplicate.h  StoreProperties.h
Source/Help/: FileManager.cpp  FileManager.h  Help.cpp  Help.h  WindowsWin.cpp  WindowsWin.h
Source/Objects/: Objects.h  Properies.h  Texture.cpp  Texture.h
